--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>
-    Hello World !
+    Hello World ! IS AUTO Deploy !
 </h1>
 <a href="http://localhost:8080/cookieTest"></a>
 
