增加 博客链接

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
 <h1>
     Hello World ! IS AUTO Deploy !
 </h1>
-<a href="http://localhost:8080/cookieTest"></a>
+<a href="https://blog.csdn.net/HoneyZe">More</a>
 
 </body>
 
